--- a/styles.css
+++ b/styles.css
@@ -14,3 +14,8 @@ img {
   font-family: Arial, Helvetica, sans-serif;
   font-weight: bolder;
 }
+
+.card {
+  height: 100%;
+  padding-bottom: 12%;
+}
