--- a/styles.css
+++ b/styles.css
@@ -1,21 +1,42 @@
+body {
+  background-color: #212121;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
 img {
   position: absolute;
   width: 100%;
   height: 50%;
 }
 
+.card-title {
+  font-family: "IBM Plex Serif", serif;
+}
+
 .card-body {
   position: relative;
+  font-family: "Montserrat", sans-serif;
 }
 
 .weather {
-  color: blue;
-  font-size: 1rem;
-  font-family: Arial, Helvetica, sans-serif;
+  color: rgb(84, 84, 165);
+  font-size: 2rem;
+  font-family: "Piedra", cursive;
   font-weight: bolder;
 }
 
 .card {
   height: 100%;
-  padding-bottom: 12%;
+  padding-bottom: 10%;
+  background-color: #fbf7f0;
+}
+
+.img-fluid {
+  width: 300px;
+  height: 300px;
+  margin-left: 22%;
+}
+
+.modal {
+  background-color: black;
 }
