--- a/styles.css
+++ b/styles.css
@@ -1,12 +1,17 @@
 body {
   background-color: #212121;
-  font-family: Arial, Helvetica, sans-serif;
 }
 
 img {
   position: absolute;
   width: 100%;
   height: 50%;
+}
+
+.card {
+  height: 100%;
+  padding-bottom: 10%;
+  background-color: #fbf7f0;
 }
 
 .card-header {
@@ -22,22 +27,23 @@ img {
 
 .weather {
   color: rgb(84, 84, 165);
-  font-size: 2rem;
+  font-size: 1.8rem;
   font-family: "Piedra", cursive;
-}
-
-.card {
-  height: 100%;
-  padding-bottom: 10%;
-  background-color: #fbf7f0;
-}
-
-.img-fluid {
-  width: 300px;
-  height: 300px;
-  margin-left: 22%;
+  padding: 1%;
 }
 
 .modal {
-  background-color: black;
+  background-color: #212121;
+}
+
+.modal-content {
+  position: relative;
+}
+
+.img-fluid {
+  width: 150px;
+  height: 150px;
+  margin-left: 35%;
+  margin-top: 12%;
+  position: absolute;
 }
